--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -21,13 +21,13 @@
 <ion-content padding class="animated fadeIn common-bg">
 
   <ion-card no-margin margin-bottom class="full-width">
-    <ion-item tappable (click)="choosePlace('from')" class="border-bottom">
+    <ion-item tappable (click)="goToPlaces()" class="border-bottom">
       <ion-icon name="search" color="primary" item-left></ion-icon>
-      <span></span>
+      <span>Awesome Places Next To Me!</span>
     </ion-item>
-    <ion-item>
-      <ion-icon name="md-calendar" color="primary" item-left></ion-icon>
-      <ion-datetime class="no-pl" displayFormat="DD/MM/YYYY" pickerFormat="DD/MM/YYYY" ></ion-datetime>
+    <ion-item tappable (click)="addPlace()" class="border-bottom">
+      <ion-icon name="search" color="primary" item-left></ion-icon>
+      <span>Add An Awesome Place!</span>
     </ion-item>
   </ion-card>
 
