--- a/src/pages/add-place/add-place.html
+++ b/src/pages/add-place/add-place.html
@@ -15,7 +15,6 @@
         <ion-label fixed>Title</ion-label>
         <ion-input
           type="text"
-          placeholder="Beautiful church..."
           name="title"
           ngModel
           required></ion-input>
@@ -86,7 +85,7 @@
           </button>
         </ion-col>
       </ion-row>
-      <ion-row>
+      <ion-row *ngIf="imageUrl != ''">
         <ion-col>
           <img [src]="imageUrl">
         </ion-col>
@@ -98,7 +97,7 @@
             color="secondary"
             block
             type="submit"
-            [disabled]="!f.valid || !locationIsSet">
+            [disabled]="!f.valid || !locationIsSet || imageUrl==''">
             Add this Place
           </button>
         </ion-col>
