--- a/src/pages/places/places.html
+++ b/src/pages/places/places.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-navbar>
     <ion-buttons end >
-      <button ion-button icon-only [navPush]="AddPlacePage" >
+      <button ion-button icon-only (click)="addPlace()" >
         <ion-icon name="add"></ion-icon>
       </button>
     </ion-buttons>
