--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -7,26 +7,23 @@
     <ion-title>
       <strong>FSAA</strong>
     </ion-title>
-    <ion-buttons end>
-      <button ion-button tappable (click)="presentNotifications($event)">
-        <ion-icon name="notifications"></ion-icon>
-      </button>
-      <button ion-button tappable (click)="goToAccount()">
-        <ion-icon name="cog"></ion-icon>
-      </button>
-    </ion-buttons>
+
   </ion-navbar>
 </ion-header>
 
 <ion-content padding class="animated fadeIn common-bg">
 
   <ion-card no-margin margin-bottom class="full-width">
+      <ion-item tappable (click)="goToGood()" class="border-bottom">
+          <ion-icon name="happy" color="primary" item-left></ion-icon>
+          <span>Good To Know!</span>
+        </ion-item>
     <ion-item tappable (click)="goToPlaces()" class="border-bottom">
       <ion-icon name="search" color="primary" item-left></ion-icon>
       <span>Awesome Places Next To Me!</span>
     </ion-item>
     <ion-item tappable (click)="addPlace()" class="border-bottom">
-      <ion-icon name="search" color="primary" item-left></ion-icon>
+      <ion-icon name="add" color="primary" item-left></ion-icon>
       <span>Add An Awesome Place!</span>
     </ion-item>
   </ion-card>
