--- a/src/pages/emergency/emergency.html
+++ b/src/pages/emergency/emergency.html
@@ -28,7 +28,7 @@
 
   <ion-list margin-bottom class="full-width">
     <ion-row class="rowInEmergency">  
-    <button id="emergencyBtns" ion-button color="danger" (click)="callPolic()" >
+    <button id="emergencyBtns" ion-button color="danger" (click)="callPolice()" >
         <ion-icon class="emergencyIcons" name="nuclear"></ion-icon>  
         <span>Call The Police !</span>
       </button>
