working on get images from storage

--- a/src/pages/add-place/add-place.html
+++ b/src/pages/add-place/add-place.html
@@ -85,9 +85,9 @@
           </button>
         </ion-col>
       </ion-row>
-      <ion-row *ngIf="imageUrl != ''">
+      <ion-row *ngIf="base64Image != ''">
         <ion-col>
-          <img [src]="imageUrl">
+          <img [src]="base64Image">
         </ion-col>
       </ion-row>
       <ion-row>
