--- a/src/pages/place/place.html
+++ b/src/pages/place/place.html
@@ -18,7 +18,7 @@
   <ion-grid>
     <ion-row>
       <ion-col text-center>
-        <img [src]="place.imageUrl">
+        <img [src]="place.image">
       </ion-col>
     </ion-row>
     <ion-row>
