--- a/src/pages/places/places.html
+++ b/src/pages/places/places.html
@@ -12,7 +12,7 @@
 
 <ion-content padding>
   <ion-card *ngFor="let place of places; let i = index" (click)="onOpenPlace(place,i)">
-    <img [src]="place.imageUrl">
+    <img [src]="place.image">
     <ion-card-content>
       <ion-card-title>
         {{place.title}}
