--- a/src/pages/place/place.html
+++ b/src/pages/place/place.html
@@ -14,7 +14,7 @@
 {{place.location.lng}}
 
 
-<ion-content padding>
+<ion-content id="linear-bg" padding>
   <ion-grid>
     <ion-row>
       <ion-col text-center>
