--- a/src/pages/add-place/add-place.html
+++ b/src/pages/add-place/add-place.html
@@ -8,7 +8,7 @@
 </ion-header>
 
 
-<ion-content padding>
+<ion-content id="linear-bg" padding>
   <form #f="ngForm" (ngSubmit)="onSubmit(f)">
     <ion-list>
       <ion-item>
