--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -26,6 +26,10 @@
       <ion-icon name="add" color="primary" item-left></ion-icon>
       <span>Add An Awesome Place!</span>
     </ion-item>
+    <ion-item tappable (click)="searchNextToYou()" class="border-bottom">
+        <ion-icon name="search" color="primary" item-left></ion-icon>
+        <span>Search Next To You</span>
+      </ion-item>
   </ion-card>
   <ion-card>
     <ion-item>
