--- a/src/pages/add-place/add-place.html
+++ b/src/pages/add-place/add-place.html
@@ -30,7 +30,7 @@
     <ion-grid>
       <ion-row>
         <ion-col>
-          <button
+          <button 
             ion-button
             block
             outline
@@ -94,7 +94,7 @@
         <ion-col>
           <button
             ion-button
-            color="secondary"
+            color="primary"
             block
             type="submit"
             >
