--- a/src/pages/emergency/emergency.html
+++ b/src/pages/emergency/emergency.html
@@ -11,16 +11,8 @@
             <ion-icon name="menu"></ion-icon>
           </button>
           <ion-title>
-            <strong>Ionic 3</strong> Start Theme
+            <strong>EMERGENCY</strong>
           </ion-title>
-          <ion-buttons end>
-            <button ion-button tappable (click)="presentNotifications($event)">
-              <ion-icon name="notifications"></ion-icon>
-            </button>
-            <button ion-button tappable (click)="goToAccount()">
-              <ion-icon name="cog"></ion-icon>
-            </button>
-          </ion-buttons>
         </ion-navbar>
       </ion-header>
       
