--- a/src/pages/places/places.html
+++ b/src/pages/places/places.html
@@ -12,12 +12,12 @@
 
 <ion-content id="linear-bg" padding >
   <ion-card *ngFor="let place of places; let i = index" (click)="onOpenPlace(place,i)">
-    <img [src]="place.image">
+     
     <ion-card-content>
       <ion-card-title>
-        {{place.title}}
+        {{place.place.title}}
       </ion-card-title>
-      <p>{{place.description}}</p>
     </ion-card-content>
+    <img height="400" width="42" [src]="place.image">
   </ion-card>
 </ion-content>
