--- a/src/pages/search-next-to-you/search-next-to-you.html
+++ b/src/pages/search-next-to-you/search-next-to-you.html
@@ -21,19 +21,36 @@
   </ion-item>
 
   <ion-item>
-      <button ion-button id="hotelsBtn" ion-button icon-start default="true" outline="true" color="primary" class="round" (click)="search($event, 'hotel')">
-          Hotels
+      <button ion-button id="hotelsBtn" ion-button icon-start default="true" outline="true" color="primary" class="round" (click)="search($event, 'supermarket')">
+        Supermarket
       </button>
   </ion-item>
 
     <ion-item >
-        <button ion-button id="hospitalBtn" ion-button icon-start default="true" outline="true" color="primary" class="round" (click)="search($event, 'hospital')">
-            Hospitals
+        <button ion-button id="hospitalBtn" ion-button icon-start default="true" outline="true" color="primary" class="round" (click)="search($event, 'restaurant')">
+          Restaurants
         </button>
     </ion-item>
     <ion-item>
-        <button ion-button id="mallsBtn" ion-button icon-start default="true" outline="true" color="primary" class="round" (click)="search($event,'mall')">
-            Malls
+        <button ion-button id="mallsBtn" ion-button icon-start default="true" outline="true" color="primary" class="round" (click)="search($event,'shopping_mall')">
+          Shopping Malls
         </button>
-    </ion-item>    
+    </ion-item>
+    <ion-item>
+      <button ion-button id="doctorsBtn" ion-button icon-start default="true" outline="true" color="primary" class="round" (click)="search($event,'doctor')">
+        Doctors
+      </button>
+  </ion-item>  
+  <ion-item>
+    <button ion-button id="banksBtn" ion-button icon-start default="true" outline="true" color="primary" class="round" (click)="search($event,'bank')">
+      Banks
+    </button>
+</ion-item>
+
+<ion-item>
+  <button ion-button id="clubsBtn" ion-button icon-start default="true" outline="true" color="primary" class="round" (click)="search($event,'night_club')">
+    Night Clubs
+  </button>
+</ion-item>
+
 </ion-content>
