--- a/src/pages/search-next-to-you/search-next-to-you.html
+++ b/src/pages/search-next-to-you/search-next-to-you.html
@@ -6,8 +6,8 @@
 -->
 <ion-header>
 
-  <ion-navbar>
-    <ion-title>searchNextToYou</ion-title>
+  <ion-navbar color="light">
+    <ion-title>Search Next To You</ion-title>
   </ion-navbar>
 
 </ion-header>
