--- a/src/pages/places/places.html
+++ b/src/pages/places/places.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-navbar>
+  <ion-navbar color="light">
     <ion-buttons end >
       <button ion-button icon-only (click)="addPlace()" >
         <ion-icon name="add"></ion-icon>
