--- a/src/pages/emergency/emergency.html
+++ b/src/pages/emergency/emergency.html
@@ -20,21 +20,18 @@
 
   <ion-list margin-bottom class="full-width">
     <ion-row class="rowInEmergency">  
-    <button id="emergencyBtns" ion-button color="danger" (click)="callPolice()" >
-        <ion-icon class="emergencyIcons" name="nuclear"></ion-icon>  
-        <span>Call The Police !</span>
+      <button id="emergencyBtns" ion-button color="danger" (click)="callPolice()" > 
+        <span><ion-icon class="emergencyIcons" name="nuclear"></ion-icon>Call The Police !</span>
       </button>
     </ion-row>
     <ion-row class="rowInEmergency">
         <button id="emergencyBtns" ion-button color="danger" (click)="callAmbulance()" >
-            <ion-icon class="emergencyIcons" name="thermometer"></ion-icon>  
-          <span>Call The Ambulance!</span>
+          <span><ion-icon class="emergencyIcons" name="thermometer"></ion-icon>Call The Ambulance!</span>
         </button>
       </ion-row>
       <ion-row class="rowInEmergency" >
           <button id="emergencyBtns" ion-button color="danger" (click)="callFireFighting()" >
-              <ion-icon class="emergencyIcons" name="flame"></ion-icon>  
-            <span>Call The Fire Fighting!</span>
+            <span><ion-icon class="emergencyIcons" name="flame"></ion-icon>Call The Fire Fighting!</span>
           </button>
         </ion-row>
   
