--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -16,16 +16,16 @@
   <ion-card no-margin margin-bottom class="full-width">
 
     <ion-item tappable (click)="goToPlaces()" class="border-bottom">
-      <ion-icon name="search" color="primary" item-left></ion-icon>
-      <h3>Awesome Places In Selected Country!</h3>
+      <ion-icon name="leaf" color="primary" item-left></ion-icon>
+      <span>Places In Selected Country!</span>
     </ion-item>
     <ion-item tappable (click)="goToPlacesNextMe()" class="border-bottom">
       <ion-icon name="search" color="primary" item-left></ion-icon>
-      <span>Awesome Places Next To Me!</span>
+      <span>Places Next To Me!</span>
     </ion-item>
     <ion-item tappable (click)="addPlace()" class="border-bottom">
       <ion-icon name="add" color="primary" item-left></ion-icon>
-      <span>Add An Awesome Place!</span>
+      <span>Add An Place!</span>
     </ion-item>
     <ion-item tappable (click)="searchNextToYou()" class="border-bottom">
         <ion-icon name="search" color="primary" item-left></ion-icon>
